--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,77 @@
 @import "color";
 
+body {
+  padding: 0;
+  margin: 0;
+}
 
 .page-container {
-  max-width: 1100px;
+  max-width: 1380px;
   margin: 0 auto;
+  width: 100%;
+}
+
+#header {
+  background-image: url("img/header.jpg");
+  background-color: $--blue;
+  color: $--white;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  
+
+  .logo {
+    font-size: 60px;
+    padding: 25px;
+  }
+
+  .links-wrap {
+
+    .flex{
+      display: flex;
+    }
+
+    .contact-header {
+      justify-content:flex-end;
+
+      div {
+        padding: 5px 20px;
+      }
+      .phone, .email {
+        font-size: 14px;
+
+        i {
+          padding-left:5px;
+        }
+        p {
+          margin: 0;
+        }
+      }
+      
+      .icons {
+
+        i {
+          padding-right: 10px;
+          font-size: 20px;
+        }
+      }
+    }
+
+    nav {
+
+      ul {
+        list-style: none;
+
+        li{
+          padding: 20px;
+
+          a{
+            text-decoration: none;
+        }
+      }
+    }
+  }
+  }
 }
