--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
+body {
+  padding: 0;
+  margin: 0; }
+
 .page-container {
-  max-width: 1100px;
-  margin: 0 auto; }
+  max-width: 1380px;
+  margin: 0 auto;
+  width: 100%; }
+
+#header {
+  background-image: url("img/header.jpg");
+  background-color: #007bff;
+  color: #fff; }
+
+.navbar {
+  display: flex;
+  justify-content: space-between; }
+  .navbar .logo {
+    font-size: 60px;
+    padding: 25px; }
+  .navbar .links-wrap .flex {
+    display: flex; }
+  .navbar .links-wrap .contact-header {
+    justify-content: flex-end; }
+    .navbar .links-wrap .contact-header div {
+      padding: 5px 20px; }
+    .navbar .links-wrap .contact-header .phone, .navbar .links-wrap .contact-header .email {
+      font-size: 14px; }
+      .navbar .links-wrap .contact-header .phone i, .navbar .links-wrap .contact-header .email i {
+        padding-left: 5px; }
+      .navbar .links-wrap .contact-header .phone p, .navbar .links-wrap .contact-header .email p {
+        margin: 0; }
+    .navbar .links-wrap .contact-header .icons i {
+      padding-right: 10px;
+      font-size: 20px; }
+  .navbar .links-wrap nav ul {
+    list-style: none; }
+    .navbar .links-wrap nav ul li {
+      padding: 20px; }
+      .navbar .links-wrap nav ul li a {
+        text-decoration: none; }
